--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Agile Board</title>
+    <title>Kanban Board</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
